# ExcelReader

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg
src/: ExcelFileReader.py  misc_data  other_utils.py
src/ExcelReader.egg-info/: PKG-INFO  SOURCES.txt
