[metadata]
name = ExcelReader
description = Library built on top of openPyXl to read Excel files
author = Utkarsh JAIN
license = MIT
license_file = LICENSE.txt
version = 0.2.0
platforms = ["Linux", "Mac OS-X", "Unix", "Windows"]
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = .
install_requires = 
    openpyxl>=3
python_requires= >=3.7 
package_dir = 
    =src
zip_safe = False

